...
  }

  return (
    <Screen testID="consent-screen">
      {renderConsent()}
      {!props.route.params?.viewOnly ? (
        <BrandedButton enabled={agreed} onPress={onPressSubmit} style={styling.marginTopHuge} testID="button-agree">
          {isGBCountry() ? i18n.t('legal.i-agree-uk') : i18n.t('legal.i-agree')}
        </BrandedButton>
      ) : null}
    </Screen>
  );
});
...
