...

        <View style={styling.flex} />

        <ClickableText
          onPress={() => assessmentCoordinator.gotoNextScreen(route.name)}
          style={styles.done}
          testID="button-complete"
        >
          {i18n.t('thank-you.done')}
        </ClickableText>
      </Screen>
    </>
  );
...
