...
        keyExtractor={keyExtractor}
        ListFooterComponent={ListFooterComponent}
        ListHeaderComponent={ListHeaderComponent}
        renderItem={renderItem}
        style={styles.flex}
      />
      <BrandedButton onPress={onPress} style={styles.button} testID="button-cta-disease-preferences-submit">
        {props.buttonTitle}
      </BrandedButton>
    </>
  );
});

...
