...
      });
    }
  };

  renderHeader = () => (
    <View style={styles.header}>
      <DrawerToggle onPress={NavigatorService.openDrawer} testID="drawer-toggle" />
    </View>
  );

  renderPartnerLogo = () => {
    return isUSCountry() ? <PartnerLogoUS /> : isSECountry() ? <PartnerLogoSE /> : <PoweredByZoe />;
  };
...
