...
            IconComponent={HeartIcon}
            label={i18n.t('menu.item-wider-health-studies')}
            onPress={onPressWiderHealthStudies}
            showDot={startupInfo?.active_notifications?.notifications_wider_health_studies}
            sidenote={sidenote}
            sidenoteColor={startupInfo?.wider_health_studies_consent ? 'gray' : 'blue'}
            testID="menu-item-wider-health-studies"
          />
        ) : null}

        {startupInfo?.is_tester ? (
          <MenuItem
            showDot
...
